Popis změny, co jsi udělal

--- a/game.html
+++ b/game.html
@@ -36,6 +36,8 @@
         </div>
     </div>
 
+    <div id="winPopup" class="popup hidden"></div>
+
     <script src="main.js"></script>
 </body>
 </html>
