--- a/game.html
+++ b/game.html
@@ -36,7 +36,13 @@
         </div>
     </div>
 
-    <div id="winPopup" class="popup hidden"></div>
+    <div id="winOverlay" class="overlay hidden">
+        <div class="overlay-box win">
+            <h2>🎉 Výhra!</h2>
+            <p id="winMessage">Level dokončen</p>
+            <button id="backToMenuBtn">Zpět do menu</button>
+        </div>
+    </div>
 
     <script src="main.js"></script>
 </body>
